lab-LinuxFoundation-authorization-policy/httpbin-port.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: httpbin
  namespace: default
spec:
  selector:
    matchLabels:
      app: httpbin
  portLevelMtls:
    8080:
      mode: PERMISSIVE
