lab-LinuxFoundation-authorization-policy/curl-to-http-bin.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: curl-to-httpbin
  namespace: default
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/default/sa/curl"
